# TooDoo

./: .gitignore
backend/: .env  Cargo.toml  diesel.toml
backend/migrations/2025-07-15-103844_create_todos_and_reminders/: down.sql  up.sql
backend/migrations/2025-07-24-105555_setup/: down.sql  up.sql
backend/src/: api.rs  main.rs  models.rs  schema.rs  security.rs  todo.rs
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: axios.ts
frontend/src/assets/: base.css  main.css  material-components.css
frontend/src/components/: AuthForm.vue  TodoForm.vue  TodoItem.vue  TodoList.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: todo.ts
frontend/src/views/: LoginView.vue  RegisterView.vue  TodoListView.vue
